--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
 		<artifactId>log4j-api</artifactId>
 		<version>2.8.2</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20230227</version>
+	</dependency>
 		
  </dependencies>
   
