--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@
 	    <artifactId>json</artifactId>
 	    <version>20230227</version>
 	</dependency>
+
+	  <dependency>
+		  <groupId>io.micrometer</groupId>
+		  <artifactId>micrometer-registry-prometheus</artifactId>
+		  <version>1.10.3</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>io.prometheus</groupId>
+		  <artifactId>simpleclient_httpserver</artifactId>
+		  <version>0.12.0</version>
+	  </dependency>
 		
  </dependencies>
   
