--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
 		  <groupId>io.micrometer</groupId>
 		  <artifactId>micrometer-registry-prometheus</artifactId>
 		  <version>1.10.3</version>
+		  <scope>runtime</scope>
 	  </dependency>
 
 	  <dependency>
