--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
   </properties>
 
   <dependencies>
+
+	  <dependency>
+		  <groupId>org.postgresql</groupId>
+		  <artifactId>postgresql</artifactId>
+		  <version>42.2.23</version> <!-- Replace with the latest version -->
+	  </dependency>
 	  
 	<dependency>
 	    <groupId>com.sun.xml.bind</groupId>
